--- a/README
+++ b/README
@@ -2,7 +2,7 @@ This is a Connect Four Game..
 It deploys to Heroku.
 It's written in PHP.
 It has composer dependicies.
-Composer.json alerts heroku it's PHP. 
+Composer.json alerts heroku that it is PHP. 
 To run tests: phpunit --configuration="./phpunit.xml" --bootstrap="./bootstrap.php" 
 To deploy:  git push heroku master |  heroku ps:scale web=1 
 To launch: heroku open
@@ -16,3 +16,135 @@ GameBoard: Holds where the data is
 
 You'll need to call GameBoard before any Users. 
 Gamepieces is instantited in User. 
+
+https://thawing-everglades-15674.herokuapp.com is where it's up.
+
+
+Start to play: 
+GET /start/{name}/{color}/{column}
+Should return something like:
+{
+  "row": 1,
+  "leftPieces": 20,
+  "state": {
+    "1": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "blue",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "2": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "3": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "4": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "5": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "6": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    }
+  }
+}
+
+POST play is where you'll continue to play, with either a User given name or Computer to idetify the AI. 
+
+POST /play Post file looks like this, and returns the same as Get. 
+{
+  "name": "Computer",
+  "color": "black",
+  "column": "1",
+  "state": {
+    "1": {
+      "1": "blue",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "2": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "3": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "4": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "5": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    },
+    "6": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "7": ""
+    }
+  }
+}
